@@ -121,27 +121,29 @@ IT_PROG_INTLTOOL([0.35.0])
 
 # required versions
 SQLITE_REQUIRED=3.0
-LIBGNOMEMM_REQUIRED=2.20.0
-LIBGNOMEUI_REQUIRED=2.20
+GTKMM_REQUIRED=2.18.0
 GIOMM_REQUIRED=2.10.0
 GCONF_REQUIRED=2.0
 GTHREAD_REQUIRED=2.10.0
 GNET_REQUIRED=2.0.0
 LIBXINE_REQUIRED=1.1.7
+LIBGNOMEUI_REQUIRED=2.20
+LIBGNOMEMM_REQUIRED=2.20.0
 AC_SUBST(SQLITE_REQUIRED)
-AC_SUBST(LIBGNOMEMM_REQUIRED)
-AC_SUBST(LIBGNOMEUI_REQUIRED)
+AC_SUBST(LIBGTKMM_REQUIRED)
 AC_SUBST(GIOMM_REQUIRED)
 AC_SUBST(GCONF_REQUIRED)
 AC_SUBST(GTHREAD_REQUIRED)
 AC_SUBST(GNET_REQUIRED)
 AC_SUBST(LIBXINE_REQUIRED)
+AC_SUBST(LIBGNOMEUI_REQUIRED)
+AC_SUBST(LIBGNOMEMM_REQUIRED)
 
 # check for sqlite
 PKG_CHECK_MODULES(SQLITE, [sqlite3 >= $SQLITE_REQUIRED])
 
 PKG_CHECK_MODULES(ME_TV, [
-libgnomemm-2.6 >= $LIBGNOMEMM_REQUIRED libgnomeuimm-2.6 >= $LIBGNOMEUI_REQUIRED giomm-2.4 >= $GIOMM_REQUIRED gthread-2.0 >= $GTHREAD_REQUIRED gconfmm-2.6 >= $GCONF_REQUIRED gmodule-export-2.0])
+gtkmm-2.4 >= $GTKMM_REQUIRED giomm-2.4 >= $GIOMM_REQUIRED gthread-2.0 >= $GTHREAD_REQUIRED gconfmm-2.6 >= $GCONF_REQUIRED gmodule-export-2.0 gconfmm-2.6 libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED])
 AC_SUBST(ME_TV_CFLAGS)
 AC_SUBST(ME_TV_LIBS)
 
