@@ -1,5 +1,5 @@
 .pc
-.TH "ME TV" 1 "2010-01-04" "1.1.2" "Me TV Manual"
+.TH "ME TV" 1 "2010-01-07" "1.1.3" "Me TV Manual"
 
 .SH NAME
 me-tv \- a digital television (DVB) viewer for GNOME
