@@ -59,7 +59,7 @@ void StatusIcon::on_popup_menu(guint button, guint32 activate_time)
 void StatusIcon::on_menu_item_status_quit_clicked()
 {
 	get_application().get_main_window().hide();
-	Gnome::Main::quit();
+	Gtk::Main::quit();
 }
 
 void StatusIcon::on_menu_item_status_me_tv_clicked()
