@@ -2,6 +2,7 @@
 
 	* 1.1.3
 	* Use GLib/Gio instead GNet (LP: #503214)
+	* Removed deprecated libgnome/ui dependency (LP: #503219)
 
 2010-01-04  Michael Lamothe <michael.lamothe@gmail.com>
 
